# bee-informatics

./: README.md
BeesBook2015-sample-with-ApacheSolr750/: README.md  bee-plot.py  facet-heatmap.py  facet-range.py  index-dataset.sh  mid-day-bees.sh
apimondia-2019/: README.md  create-qrcode-image.py  high-res.patch
bedtime-for-bees/: README.md  bee-error-analysis.sh  bee-facets.py  bee-facets.sh  bee-step-stats-percentile.md  bee-step-stats-percentile.sh  bee-step-stats-sum.md  bee-step-stats-sum.sh  bee-step-stats.py
bedtime-for-bees/calc-pos-delta/: pom.xml
bedtime-for-bees/calc-pos-delta/src/main/java/: CalcPosDelta.java
bee-animations/: README.md  animate-bees.py  draw-a-bee-step.py  draw-a-bee.py  draw-bees.py  elliptical_bee.py  elliptical_bee_test.py  prepare-input-files.sh  process-input-files.sh
bee-walk/: BeeWalkPandas.ipynb
bg-sub/: README.md
bg-sub/src/: CMakeLists.txt  README.md  demo.cpp
data-sets/: README.md  prep-dataset.sh
shades-of-bee/: README.md
shades-of-bee/src/: CMakeLists.txt  README.md  calcBackProject-demo.cpp  calcHist-demo.cpp  common.cpp  common.h  intelligentScissors-demo.cpp  meanShift-demo.cpp  run-demos.sh
yolo-bees/: README.md
yolo-bees/src/: CMakeLists.txt  README.md  demo.cpp
